Closed
Bug 1906591
Opened 2 years ago
Closed 2 years ago
Crash in [@ mozilla::widget::DMABufDevice::Configure]
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
130 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox128 | --- | unaffected |
| firefox129 | --- | fixed |
| firefox130 | --- | fixed |
People
(Reporter: aryx, Assigned: stransky)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
1858 crashes on Linux from 5 installs.
Crash report: https://crash-stats.mozilla.org/report/index/b846ed2c-8d90-4f2e-b88f-5c8500240708
Reason: SIGSEGV / SEGV_MAPERR
Top 10 frames:
0 libxul.so mozilla::widget::DMABufDevice::Configure() widget/gtk/DMABufLibWrapper.cpp:190
1 libxul.so mozilla::widget::GetDMABufDevice()::$_0::operator()() const widget/gtk/DMABufLibWrapper.cpp:347
1 libxul.so std::__invoke_impl<void, mozilla::widget::GetDMABufDevice()::$_0, >(std::__in... /usr/include/c++/14.1.1/bits/invoke.h:61
1 libxul.so std::__invoke<mozilla::widget::GetDMABufDevice()::$_0, >(mozilla::widget::Get... /usr/include/c++/14.1.1/bits/invoke.h:96
1 libxul.so std::call_once<mozilla::widget::GetDMABufDevice()::$_0, >(std::once_flag&, mo... /usr/include/c++/14.1.1/mutex:909
1 libxul.so std::once_flag::_Prepare_execution::_Prepare_execution<std::call_once<mozilla... /usr/include/c++/14.1.1/mutex:845
1 libxul.so std::once_flag::_Prepare_execution::_Prepare_execution<std::call_once<mozilla... /usr/include/c++/14.1.1/mutex:845
2 libc.so.6 __pthread_once_slow /usr/src/debug/glibc/glibc/nptl/pthread_once.c:116
3 libc.so.6 pthread_once@GLIBC_2.2.5 /usr/src/debug/glibc/glibc/nptl/pthread_once.c:143
4 libxul.so __gthread_once(int*, void (*)()) /usr/include/c++/14.1.1/x86_64-pc-linux-gnu/bits/gthr-default.h:713
Flags: needinfo?(stransky)
| Assignee | ||
Comment 1•2 years ago
|
||
Looks like components::GfxInfo::Service() returns null in RDD process. Will fix that ASAP.
| Assignee | ||
Comment 2•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/6356631de34f
[Linux] Set GBM_BACKEND in parent process only r=emilio
Comment 4•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox130:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
| Assignee | ||
Comment 5•2 years ago
|
||
Comment on attachment 9411496 [details]
Bug 1906591 [Linux] Set GBM_BACKEND in parent process only r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Crashes on Video playback on wrongly set boxes.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We set the env variable in parent process only.
- String changes made/needed:
- Is Android affected?: No
Attachment #9411496 -
Flags: approval-mozilla-beta?
Comment 6•2 years ago
•
|
||
Comment on attachment 9411496 [details]
Bug 1906591 [Linux] Set GBM_BACKEND in parent process only r?emilio
Approved for 129.0b2
Attachment #9411496 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•2 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•