Bug 1906591 [Linux] Set GBM_BACKEND in parent process only r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D215896